apollo-router/tests/snapshots/tracing_tests__variables.snap
---
source: apollo-router/tests/tracing_tests.rs
expression: get_spans()
---
{
  "name": "tracing_tests::root",
  "record": {
    "entries": [],
    "metadata": {
      "name": "root",
      "target": "tracing_tests",
      "level": "ERROR",
      "module_path": "tracing_tests",
      "fields": {
        "names": []
      }
    }
  },
  "children": {
    "apollo_router::axum_factory::utils::request": {
      "name": "apollo_router::axum_factory::utils::request",
      "record": {
        "entries": [
          [
            "consumerName",
            ""
          ],
          [
            "roles",
            ""
          ],
          [
            "correlationId",
            ""
          ],
          [
            "cid",
            ""
          ],
          [
            "azure_region",
            ""
          ],
          [
            "http.method",
            "POST"
          ],
          [
            "http.route",
            "http://default/"
          ],
          [
            "http.flavor",
            "HTTP/1.1"
          ],
          [
            "otel.kind",
            "SERVER"
          ],
          [
            "apollo_private.request",
            true
          ],
          [
            "graphql.operation.name",
            "ExampleQuery"
          ],
          [
            "otel.name",
            "GraphQL Operation"
          ]
        ],
        "metadata": {
          "name": "request",
          "target": "apollo_router::axum_factory::utils",
          "level": "INFO",
          "module_path": "apollo_router::axum_factory::utils",
          "fields": {
            "names": [
              "consumerName",
              "roles",
              "correlationId",
              "cid",
              "azure_region",
              "http.method",
              "http.route",
              "http.flavor",
              "otel.name",
              "otel.kind",
              "graphql.operation.name",
              "graphql.operation.type",
              "apollo_private.request"
            ]
          }
        }
      },
      "children": {
        "apollo_router::plugins::telemetry::router": {
          "name": "apollo_router::plugins::telemetry::router",
          "record": {
            "entries": [
              [
                "http.method",
                "POST"
              ],
              [
                "http.route",
                "http://default/"
              ],
              [
                "http.flavor",
                "HTTP/1.1"
              ],
              [
                "trace_id",
                "[REDACTED]"
              ],
              [
                "client.name",
                ""
              ],
              [
                "client.version",
                ""
              ],
              [
                "otel.kind",
                "INTERNAL"
              ],
              [
                "apollo_private.http.request_headers",
                "{}"
              ],
              [
                "apollo_private.duration_ns",
                0
              ],
              [
                "otel.status_code",
                "Error"
              ]
            ],
            "metadata": {
              "name": "router",
              "target": "apollo_router::plugins::telemetry",
              "level": "INFO",
              "module_path": "apollo_router::plugins::telemetry",
              "fields": {
                "names": [
                  "http.method",
                  "http.route",
                  "http.flavor",
                  "trace_id",
                  "client.name",
                  "client.version",
                  "otel.kind",
                  "otel.status_code",
                  "apollo_private.duration_ns",
                  "apollo_private.http.request_headers",
                  "apollo_private.http.response_headers"
                ]
              }
            }
          },
          "children": {
            "apollo_router::services::layers::query_analysis::parse_query": {
              "name": "apollo_router::services::layers::query_analysis::parse_query",
              "record": {
                "entries": [
                  [
                    "otel.kind",
                    "INTERNAL"
                  ]
                ],
                "metadata": {
                  "name": "parse_query",
                  "target": "apollo_router::services::layers::query_analysis",
                  "level": "INFO",
                  "module_path": "apollo_router::services::layers::query_analysis",
                  "fields": {
                    "names": [
                      "otel.kind"
                    ]
                  }
                }
              },
              "children": {}
            },
            "apollo_router::plugins::telemetry::supergraph": {
              "name": "apollo_router::plugins::telemetry::supergraph",
              "record": {
                "entries": [
                  [
                    "graphql.document",
                    "query ExampleQuery($topProductsFirst: Int, $reviewsForAuthorAuthorId: ID!) {\n                topProducts(first: $topProductsFirst) {\n                    name\n                    reviewsForAuthor(authorID: $reviewsForAuthorAuthorId) {\n                        body\n                        author {\n                            id\n                            name\n                        }\n                    }\n                }\n            }"
                  ],
                  [
                    "otel.kind",
                    "INTERNAL"
                  ],
                  [
                    "apollo_private.field_level_instrumentation_ratio",
                    0.0
                  ],
                  [
                    "apollo_private.graphql.variables",
                    "{}"
                  ],
                  [
                    "graphql.operation.name",
                    "ExampleQuery"
                  ],
                  [
                    "apollo_private.operation_signature",
                    "# ExampleQuery\nquery ExampleQuery($reviewsForAuthorAuthorId:ID!,$topProductsFirst:Int){topProducts(first:$topProductsFirst){name reviewsForAuthor(authorID:$reviewsForAuthorAuthorId){author{id name}body}}}"
                  ],
                  [
                    "monotonic_counter.apollo.router.operations",
                    1
                  ],
                  [
                    "http.response.status_code",
                    400
                  ]
                ],
                "metadata": {
                  "name": "supergraph",
                  "target": "apollo_router::plugins::telemetry",
                  "level": "INFO",
                  "module_path": "apollo_router::plugins::telemetry",
                  "fields": {
                    "names": [
                      "graphql.document",
                      "graphql.operation.name",
                      "otel.kind",
                      "apollo_private.field_level_instrumentation_ratio",
                      "apollo_private.operation_signature",
                      "apollo_private.graphql.variables"
                    ]
                  }
                }
              },
              "children": {
                "apollo_router::services::supergraph_service::query_planning": {
                  "name": "apollo_router::services::supergraph_service::query_planning",
                  "record": {
                    "entries": [
                      [
                        "otel.kind",
                        "INTERNAL"
                      ],
                      [
                        "histogram.apollo_router_cache_miss_time",
                        "[REDACTED]"
                      ],
                      [
                        "kind",
                        "query planner"
                      ],
                      [
                        "storage",
                        "memory"
                      ],
                      [
                        "monotonic_counter.apollo_router_cache_miss_count",
                        1
                      ],
                      [
                        "kind",
                        "query planner"
                      ],
                      [
                        "storage",
                        "memory"
                      ],
                      [
                        "histogram.apollo_router_query_planning_time",
                        "[REDACTED]"
                      ],
                      [
                        "value.apollo_router_cache_size",
                        1
                      ],
                      [
                        "kind",
                        "query planner"
                      ],
                      [
                        "storage",
                        "memory"
                      ]
                    ],
                    "metadata": {
                      "name": "query_planning",
                      "target": "apollo_router::services::supergraph_service",
                      "level": "INFO",
                      "module_path": "apollo_router::services::supergraph_service",
                      "fields": {
                        "names": [
                          "otel.kind"
                        ]
                      }
                    }
                  },
                  "children": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
